--- a/luci-app-passwall2/luasrc/view/passwall2/node_list/node_list.htm
+++ b/luci-app-passwall2/luasrc/view/passwall2/node_list/node_list.htm
@@ -76,7 +76,7 @@ table td, .table .td {
 
 	function cbi_t_switch(section, tab) {
 		if( cbi_t[section] && cbi_t[section][tab] ) {
-			//在切换选项卡之前，先取消当前激活选项卡的全选状态
+			// Before switching tabs, first deselect all currently active tabs.
 			var btn = document.getElementById("select_all_btn");
 			if (btn) {
 				dechecked_all_node(btn);
@@ -497,7 +497,7 @@ table td, .table .td {
 				<input class="btn cbi-button cbi-button-apply" type="button" value="<%:Use%>" id="apply_{{id}}" onclick="open_set_node_div('{{id}}')"/>
 				<input class="btn cbi-button cbi-button-add" type="button" value="<%:Copy%>" onclick="copy_node('{{id}}')"/>
 				<input class="btn cbi-button cbi-button-edit" type="button" value="<%:Edit%>" onclick="location.href='<%=api.url("node_config")%>/{{id}}'" alt="<%:Edit%>" title="<%:Edit%>">
-				<input class="btn cbi-button cbi-button-remove" type="button" value="<%:Del%>" onclick="del_node('{{id}}')" alt="<%:Del%>" title="<%:Del%>">
+				<input class="btn cbi-button cbi-button-remove" type="button" value="<%:Delete%>" onclick="del_node('{{id}}')" alt="<%:Delete%>" title="<%:Delete%>">
 			</div>
 		</td>
 	</tr>
@@ -646,7 +646,7 @@ table td, .table .td {
 			}
 			
 			tab_ul_html += tab_ul_li_html + '</ul>'
-			tab_content_html += tab_content_html + '</fieldset>'
+			tab_content_html += '</fieldset>'
 			var tab_html = tab_ul_html + tab_content_html
 			
 			document.getElementById("node_list").innerHTML = tab_html
@@ -659,6 +659,21 @@ table td, .table .td {
 				cbi_t_switch("passwall2.nodes", default_group)
 			}
 			
+			//clear expire data
+			if (localStorage && localStorage.length > 0) {
+				const now = Date.now();
+				for (let i = 0; i < localStorage.length; i++) {
+					let key = localStorage.key(i);
+					if (key && (key.startsWith("icmp") || key.startsWith("tcping"))) {
+						let value_str = localStorage.getItem(key);
+						const value = JSON.parse(value_str);
+						if (!(value && value.savetime && (now - value.timestamp) < value.savetime)) {
+							localStorage.removeItem(key);
+						}
+					}
+				}
+			}
+
 			get_now_use_node();
 			
 			pingAllNodes();
