--- a/luci-app-passwall2/luasrc/view/passwall2/cbi/nodes_listvalue_com.htm
+++ b/luci-app-passwall2/luasrc/view/passwall2/cbi/nodes_listvalue_com.htm
@@ -6,7 +6,7 @@
 --	Description: Passwall(2) UI template
 -- It is the common part of the template and cannot be used independently
 
-local api = require "luci.passwall.api"
+local api = require "luci.passwall2.api"
 local appname = api.appname
 
 %>
